--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -8,5 +8,5 @@
       </h1>
     </div>
   </div>
-  <%= link_to 'Allons-y !', communications_path, class: 'btn btn-outline-warning mt-5 p-3 rounded-pill' %>
+  <%= link_to 'Appuyer pour commencer...', communications_path, class: 'btn btn-outline-warning mt-5 p-3 rounded-pill' %>
 </div>
