--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -72,73 +72,73 @@
 }
 
 
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
+// /* The switch - the box around the slider */
+// .switch {
+//   position: relative;
+//   display: inline-block;
+//   width: 60px;
+//   height: 34px;
+// }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+// /* Hide default HTML checkbox */
+// .switch input {
+//   opacity: 0;
+//   width: 0;
+//   height: 0;
+// }
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(226, 226, 1);
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+// /* The slider */
+// .slider {
+//   position: absolute;
+//   cursor: pointer;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background-color: rgb(226, 226, 1);
+//   -webkit-transition: .4s;
+//   transition: .4s;
+// }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+// .slider:before {
+//   position: absolute;
+//   content: "";
+//   height: 26px;
+//   width: 26px;
+//   left: 4px;
+//   bottom: 4px;
+//   background-color: white;
+//   -webkit-transition: .4s;
+//   transition: .4s;
+// }
 
-input:checked + .slider {
-  background-color: #6EC207;
-}
+// input:checked + .slider {
+//   background-color: #6EC207;
+// }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #6EC207;
-}
+// input:focus + .slider {
+//   box-shadow: 0 0 1px #6EC207;
+// }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+// input:checked + .slider:before {
+//   -webkit-transform: translateX(26px);
+//   -ms-transform: translateX(26px);
+//   transform: translateX(26px);
+// }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
+// /* Rounded sliders */
+// .slider.round {
+//   border-radius: 34px;
+// }
 
-.slider.round:before {
-  border-radius: 50%;
-}
+// .slider.round:before {
+//   border-radius: 50%;
+// }
 
-.container-index {
-  padding: 0; /* Supprime les marges internes */
-  padding-bottom: 100px; /* Ajustez la valeur en fonction de la hauteur de la navbar */
-}
+// .container-index {
+//   padding: 0; /* Supprime les marges internes */
+//   padding-bottom: 100px; /* Ajustez la valeur en fonction de la hauteur de la navbar */
+// }
 
 
 // // Switch button new possibility
@@ -162,11 +162,13 @@ input:checked + .slider:before {
   height: 100%;
   left: 0%;
   border-radius:20px;
-  background: white;
+  background: orange;
   transition: all 0.3s;
 }
+
 .toggleCheckbox:checked + .toggleContainer::before {
   left: 50%;
+  background: green;
 }
 .toggleContainer div {
   padding: 6px;
@@ -181,11 +183,11 @@ input:checked + .slider:before {
   transition: color 0.3s;
 }
 .toggleCheckbox:checked + .toggleContainer div:last-child{
-  color: #343434;
+  color: white;
   transition: color 0.3s;
 }
 .toggleCheckbox + .toggleContainer div:first-child{
-  color: #343434;
+  color: white;
   transition: color 0.3s;
 }
 .toggleCheckbox + .toggleContainer div:last-child{
